update get participant url
